get api category and homepage
