# resources/js/provider.js
@@ -1,0 +1,7 @@
+export function getUrlList(){
+    const baseUrl='http://127.0.0.1:8000/api';
+    return{
+        getHeaderCategoriesData :''+baseUrl+'/getHeaderCategoriesData'
+    }
+}
+export default getUrlList;
